--- a/radio_quran_feature/src/main/res/layout/quran_radio_layout.xml
+++ b/radio_quran_feature/src/main/res/layout/quran_radio_layout.xml
@@ -75,6 +75,7 @@
             android:layout_height="0dp"
             android:background="@color/white"
             android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
