--- a/quran_feature/src/main/res/layout/tafsir_item_view.xml
+++ b/quran_feature/src/main/res/layout/tafsir_item_view.xml
@@ -30,7 +30,7 @@
         android:layout_marginEnd="8dp"
         android:textSize="17sp"
         android:textStyle="bold"
-        android:text="@{tafsir.resource_name}"
+        android:text="@{tafsir.resourceName}"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
