--- a/quran_feature/src/main/res/layout/aya_item_view.xml
+++ b/quran_feature/src/main/res/layout/aya_item_view.xml
@@ -25,7 +25,7 @@
         android:paddingBottom="5dp"
         android:paddingTop="5dp"
         android:textColor="@{verse.selected?@color/purple_200:@color/black}"
-        android:text="@{verse.text_madani.isEmpty() ? verse.text_simple : verse.text_madani}"
+        android:text="@{verse.textMadani.isEmpty() ? verse.textSimple : verse.textMadani}"
         android:textSize="@{verse.selected?@dimen/selected_size:@dimen/un_selected_size}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +42,7 @@
         android:fontFamily="@font/quran"
         android:textColor="@{verse.selected?@color/purple_200:@color/black}"
         android:gravity="center"
-        android:text="@{String.valueOf(verse.verse_number)}"
+        android:text="@{String.valueOf(verse.verseNumber)}"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="@+id/aya_content"
         app:layout_constraintStart_toStartOf="parent"
