--- a/quran_feature/src/main/res/layout/juz_item_view.xml
+++ b/quran_feature/src/main/res/layout/juz_item_view.xml
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="19dp"
             tools:text="1"
-            android:text="@{String.valueOf(juz.juz_num)}"
+            android:text="@{String.valueOf(juz.juzNum)}"
             android:textSize="20sp"
             android:fontFamily="@font/quran"
             app:layout_constraintBottom_toBottomOf="@+id/textView6"
