--- a/history_feature/src/main/res/layout/story_fragment.xml
+++ b/history_feature/src/main/res/layout/story_fragment.xml
@@ -36,6 +36,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0"
+                app:enableAutomaticInitialization="true"
+                app:handleNetworkEvents="true"
                  />
 
             <com.google.android.material.imageview.ShapeableImageView
