--- a/quran_feature/src/main/res/layout/quran_fragment_layout.xml
+++ b/quran_feature/src/main/res/layout/quran_fragment_layout.xml
@@ -33,6 +33,7 @@
                 android:iconifiedByDefault="false"
                 android:layoutDirection="rtl"
                 android:queryBackground="@null"
+                app:searchListener="@{viewModel.searchListener}"
                 android:queryHint="@string/txt_search" />
         </androidx.cardview.widget.CardView>
 
