Impl Search & add fts

--- a/quran_feature/src/main/res/layout/sura_item_view.xml
+++ b/quran_feature/src/main/res/layout/sura_item_view.xml
@@ -4,6 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
+        <import type="android.view.View"/>
         <variable
             name="juz"
             type="com.mabrouk.quran_listing_feature.domain.models.JuzSurah" />
@@ -33,18 +34,31 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:textColor="@color/black"
-            android:gravity="center"
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            tools:text="TextView"
-            android:text="@{juz.fromTo}"
-            android:textSize="17sp"
+            android:layout_marginStart="16dp"
             android:fontFamily="@font/quran"
+            android:gravity="center"
+            android:text="@{juz.fromTo}"
+            android:textColor="@color/black"
+            android:textSize="17sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/download_img"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="TextView" />
+
+        <ImageView
+            android:visibility="@{juz.sura.download ? View.GONE : View.VISIBLE }"
+            android:id="@+id/download_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:padding="8dp"
+            android:src="@drawable/ic_download"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
